--- a/test3/src/assets/sass/lbd/_navbars.scss
+++ b/test3/src/assets/sass/lbd/_navbars.scss
@@ -65,7 +65,7 @@
     }
     
     &.fixed{
-        width: calc(100% - $sidebar-width);
+        width: calc(100% - #{$sidebar-width}); // Error in build process, wrapped with #{}
         right: 0;
         left: auto;
         border-radius: 0;
